budge hamburger over so it's not falling off screen, fix scaling issue on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -86,7 +86,7 @@ body {
     display: block;
     cursor: pointer;
     position: absolute;
-    right: 10px;
+    right: 30px;
     top: 40px;
     padding: 3px;
     color: #000;
